--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 pygist
 - gist upload script
 - Hirotaka Kawata <info@techno-st.net>
-- http://www.techno-st.net/pygist
+- http://www.techno-st.net/wiki/pygist
 
 setup:
 cp gist_conf.py.sample gist_conf.py
@@ -10,5 +10,5 @@ edit gist_conf.py...
 usage:
 python pygist.py [filename]
   or
-ln -s pygist.py /usr/local/bin/gist
+ln -s /path/to/pygist.py /usr/local/bin/gist
 gist [filename]
